--- a/index.css
+++ b/index.css
@@ -1,10 +1,58 @@
 :root {
+    margin: 0;
+    padding: 0;
+    --main-bg-color: #000;
+    --body-font: #FFF;
+}
 
+* {
+    box-sizing: border-box;
 }
 
 body {
     font-family: "";
+    color: var(--body-font);
+    background-color: var(--main-bg-color);
+    text-transform: uppercase;
     margin: 0;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(calc(25% - 20px), 1fr));
+    gap: 20px;
+    grid-auto-rows: minmax(100px, auto);
+    max-width: 1200px; 
+    margin: 0 auto;
+}
+
+.grid-item {
+    display: block;
+    overflow: hidden;
+    background-color: #333;
+    border-radius: 20px;
+    position: relative;
+    padding-top: 55%;
+}
+
+.grid-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: filter 0.3s ease;
+    filter: brightness(0.7);
+}
+
+.grid-item:hover img {
+    filter: brightness(1);
 }
 
 section {
@@ -12,17 +60,15 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100vh;
 }
 
 form {
     max-width: 30rem;
     padding: 3rem;
-    width: 25vw;
 }
 
 .control {
-    align-items: flex-start;
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,11 +81,15 @@ form .control:first-child {
 
 input {
     width: 100%;
-    border: 1px solid #000;
-    border-radius: 10px;
+    border: 1px solid #FFF;
+    background-color: #000;
+    color: #333;
+    border-radius: 20px;
     font-size: 1rem;
     margin-top: 0.5rem;
-    padding: 0.75rem 0.5rem;
+    padding: 0.3rem 0.5rem;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 input:focus {
@@ -53,22 +103,22 @@ input:focus {
 }
 
 label {
-    font-size: 0.875rem;
-    text-transform: uppercase;
+    font-size: 1.5rem;
 }
 
 button {
     background-color: #eee;
+    color: #000;
     border-radius: 10px;
     border: 0;
-    color: #000;
     font-size: 1rem;
     padding: 0.5rem 1.25rem;
     transition: background-color 150ms ease-in-out;
+    text-transform: uppercase;
 }
 
 button:hover {
-    background-color: #5e5e5e;
+    background-color: #FFF;
 }
 
 a {
