--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     --main-bg-color: #000;
-    --body-font: #FFF;
+    --body-font-color: #FFF;
+    --body-font:
+    --line-height: 1.5;
 }
 
 * {
@@ -11,7 +13,7 @@
 
 body {
     font-family: "";
-    color: var(--body-font);
+    color: var(--body-font-color);
     background-color: var(--main-bg-color);
     text-transform: uppercase;
     margin: 0;
@@ -53,6 +55,7 @@ header {
 
 .grid-item:hover img {
     filter: brightness(1);
+    background-image: url("/svg/selector.svg");
 }
 
 section {
