--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,8 @@
     padding: 0;
     --main-bg-color: #000;
     --body-font-color: #FFF;
-    --body-font:
-    --line-height: 1.5;
+    --main-font: Inter, sans-serif;
+    line-height: 1.5;
 }
 
 * {
@@ -12,11 +12,34 @@
 }
 
 body {
-    font-family: "";
+    font-family: var(--main-font);
     color: var(--body-font-color);
     background-color: var(--main-bg-color);
     text-transform: uppercase;
     margin: 0;
+}
+
+h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+    margin: 1rem;
+}
+
+h3 {
+    color: #000;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 500;
+    margin: 1rem;
+}
+
+p {
+    color: #000;
+    text-transform: none;
+    text-align: center;
 }
 
 header {
@@ -53,9 +76,20 @@ header {
     filter: brightness(0.7);
 }
 
-.grid-item:hover img {
+.grid-item.image-selector img {
     filter: brightness(1);
+}
+
+.image-selector::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url("/svg/selector.svg");
+    background-size: cover;
+    opacity: 1;
 }
 
 section {
@@ -67,7 +101,7 @@ section {
 
 form {
     max-width: 30rem;
-    padding: 3rem;
+    padding: 2rem;
 }
 
 .control {
@@ -75,30 +109,22 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 1.5rem;
-}
-
-form .control:first-child {
-    margin-top: 0;
+    margin-top: 0.5rem;
+    gap: 1rem;
 }
 
 input {
     width: 100%;
     border: 1px solid #FFF;
     background-color: #000;
-    color: #333;
+    color-scheme: dark;
     border-radius: 20px;
     font-size: 1rem;
-    margin-top: 0.5rem;
     padding: 0.3rem 0.5rem;
     text-align: center;
     text-transform: uppercase;
 }
 
-input:focus {
-    border-color: #eee;
-    outline-width: 0;
-}
 
 ::placeholder {
     color: #333;
@@ -109,23 +135,24 @@ label {
     font-size: 1.5rem;
 }
 
-button {
-    background-color: #eee;
+.form-btn {
+    background-color: #FFF;
     color: #000;
-    border-radius: 10px;
+    border-radius: 18px;
     border: 0;
     font-size: 1rem;
     padding: 0.5rem 1.25rem;
+    margin-top: 1rem;
     transition: background-color 150ms ease-in-out;
     text-transform: uppercase;
 }
 
-button:hover {
-    background-color: #FFF;
+.form-btn:hover {
+    background-color: #ed4eda;
 }
 
 a {
-    color: #ecfdf5;
+    color: #FFF;
 }
 
 .errors {
@@ -139,4 +166,43 @@ a {
     font-size: 0.875rem;
     margin: 0;
     padding: 0;
+}
+
+.help-btn {
+    margin: 3rem;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-color: transparent;
+    border: none;
+}
+
+.help-btn:hover {
+    filter: invert(40%) sepia(94%) saturate(2052%) hue-rotate(279deg) brightness(99%) contrast(87%);
+}
+
+#overlay {
+    position: fixed; 
+    display: none; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+    cursor: pointer; 
+}
+
+.overlay:target {
+    display: block; 
+    opacity: 1;
+}
+
+#overlay-text {
+    margin: 15rem auto;
+    padding: 3rem;
+    background: #fff;
+    border-radius: 10px;
+    width: 35rem;
+    position: relative;
 }
