--- a/css/subpage.css
+++ b/css/subpage.css
@@ -12,16 +12,36 @@
 }
 
 body {
-    font-family: "";
+    font-family: var(--main-font);
     color: var(--body-font-color);
-    background-color: var(--main-bg-color);
+    background: linear-gradient(90deg, #000000 0%, #282828 55.56%);
     text-transform: uppercase;
-    margin: 0;
+}
+
+h3 {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+p {
+    font-size: 0.9rem;
+    font-weight: 300;
+    line-height: 1.6rem;
+}
+
+a {
+    color: var(--body-font-color);
+    font-weight: 600;
+    text-underline-offset: 5px;
+}
+
+a:hover {
+    color: #5b5b5b;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr; 
+    grid-template-columns: 1fr 1.5fr; 
     height: 100vh;
 }
 
@@ -32,12 +52,16 @@ body {
     top: 0;
 }
 
+.back-button:hover {
+    filter: invert(40%) sepia(94%) saturate(2052%) hue-rotate(279deg) brightness(99%) contrast(87%);
+}
+
 #description {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
-    padding: 4rem;
+    padding: 6rem;
 }
 
 .brand-header {
@@ -46,19 +70,15 @@ body {
     gap: 2rem;
 }
 
-#text {
-    
-    
-}
-
 #gallery {
     max-height: 100vh;
     overflow: scroll;
+    overflow-x: hidden; 
+    border-radius: 1rem;
 }  
 
 .gallery-content {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column; 
     height: 120rem;  
 }
@@ -67,6 +87,29 @@ body {
     flex: 1; /* images fill the available space evenly */
     background-repeat: repeat-x;
     background-size: contain;
+    cursor: pointer;
+}
+
+.expanded {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.8);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    backdrop-filter: blur(5px);
+}
+
+.portrait {
+    min-height: 700px;
+}
+
+.landscape {
+    min-height: 400px;
 }
 
 /* svg styles */
